just add localstorage

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li><a onclick="solved()">Solved</a></li>
             <li><a onclick="unSolved()">UnSolved</a></li>
             <li><a onclick="allTodos()">All</a></li>
+            <li><a onclick="getOldSession()">History</a></li>
             <!-- <button >Add</button>
                 <button onclick="solved()">Solved</button>
                 <button onclick="unSolved()">UnSolved</button>
