--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
     <div class="container">
       <h1 class="text-center zendesk-size">To Do List</h1>
       <div class="category">
-        <input type="text" id="thingsToDo" />
+        <input type="text" id="thingsToDo" placeholder="something...." />
+        <span><input type="datetime-local" name="" id="datetime"></span>
         <div class="btn-group">
           <ol>
-            <li><a onclick="addTodo()">Add</a></li>
+            <li><a id="myBtn" onclick="addTodo()">Add</a></li>
             <li><a onclick="solved()">Solved</a></li>
             <li><a onclick="unSolved()">UnSolved</a></li>
             <li><a onclick="allTodos()">All</a></li>
